adding gulp to combine and min files for performance

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
   <div class="row">
     <div class="feature col-sm-6 col-md-3">
       <a href="tel:0393409001">
-        <img src="/img/features/mobile.png" alt="Phone" />
+        <img src="public/img/features/mobile.png" alt="Phone" />
       </a>
       <h3 class="title">
         <a href="tel:0393409001">Phone Us</a>
@@ -19,7 +19,7 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
     </div>
     <div class="feature col-sm-6 col-md-3">
       <a href="mailto:info@websurvey.com.au">
-        <img src="/img/features/email.png" alt="email" />
+        <img src="public/img/features/email.png" alt="email" />
       </a>
       <h3 class="title">
         <a href="mailto:info@websurvey.com.au">Email Us</a>
@@ -27,7 +27,7 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
       <p>info@websurvey.com.au</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <img src="/img/features/mail.png" alt="mailing address"/>
+      <img src="public/img/features/mail.png" alt="mailing address"/>
       <h3 class="title">
         Mail Us
       </h3>
@@ -40,7 +40,7 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
     </div>
     <div class="feature col-sm-6 col-md-3">
       <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
-        <img src="/img/features/home.png" alt="street address" />
+        <img src="public/img/features/home.png" alt="street address" />
       </a>
       <h3 class="title">
         <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
@@ -64,7 +64,7 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
       <div class="col-md-12">
         <p class="sd-map">
           <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
-            <img src="/img/sdmap/SD-map-final.png" alt="Strategic data location">
+            <img src="public/img/sdmap/SD-map-final.png" alt="Strategic data location">
             <span class="sr-only">(opens new window to google maps)</span>
           </a>
         </p>
