--- a/services/index.html
+++ b/services/index.html
@@ -10,7 +10,7 @@ description: WebSurvey is an online survey business created &amp; managed by sur
 <!--Service list-->
   <!--a service-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12" id="helpdesk">
-    <img src="/img/features/helpdesk.png" width="96" height="95" alt="Help Desk">
+    <img src="public/img/features/helpdesk.png" width="96" height="95" alt="Help Desk">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Help desk support for your respondents</h3>
@@ -19,7 +19,7 @@ description: WebSurvey is an online survey business created &amp; managed by sur
   <!-- /service-->
   <!--a service-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/profiles.png" width="96" height="95" alt="Profiles">
+    <img src="public/img/features/profiles.png" width="96" height="95" alt="Profiles">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Respondent profiles and email invitations</h3>
@@ -30,7 +30,7 @@ description: WebSurvey is an online survey business created &amp; managed by sur
   <!-- /service-->
   <!--a service-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/analysis.png" width="96" height="95" alt="Analysis">
+    <img src="public/img/features/analysis.png" width="96" height="95" alt="Analysis">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Results, analysis and bulk survey reporting</h3>
