--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: We run your online survey for you! Complete service for online surv
             <div class="slide-content">
               <div class="row">
                 <div class="col-md-5">
-                  <img src="img/slides/websurvey-multi-device.png" alt="multiple devices" data-animate-in="bounceInLeft" data-animate-delay="de-08" />
+                  <img src="/img/slides/websurvey-multi-device.png" alt="multiple devices" data-animate-in="bounceInLeft" data-animate-delay="de-08" />
                 </div>
                 <div class="col-md-6 caption">
                   <h2 data-animate-in="bounceInRight" data-animate-delay="de-02">
@@ -42,7 +42,7 @@ simply hand us your questions and we can do the rest</p>
   <div class="row">
     <div class="feature col-sm-6 col-md-3">
       <a href="/services/#helpdesk">
-        <img src="img/features/helpdesk.png" alt="Helpdesk" />
+        <img src="/img/features/helpdesk.png" alt="Helpdesk" />
       </a>
       <h3 class="title">
         <a href="/services/#helpdesk">Helpdesk</a>
@@ -51,7 +51,7 @@ simply hand us your questions and we can do the rest</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
       <a href="/features/#secure">
-        <img src="img/features/secure.png" alt="Secure" />
+        <img src="/img/features/secure.png" alt="Secure" />
       </a>
       <h3 class="title">
         <a href="/features/#secure">Secure</a>
@@ -60,7 +60,7 @@ simply hand us your questions and we can do the rest</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
       <a href="/features/#accessible">
-        <img src="img/features/accessible.png" alt="Accessible"/>
+        <img src="/img/features/accessible.png" alt="Accessible"/>
       </a>
       <h3 class="title">
         <a href="/features/#accessible">Accessible</a>
@@ -69,7 +69,7 @@ simply hand us your questions and we can do the rest</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
       <a href="/faq/">
-        <img src="img/features/support.png" alt="Support" />
+        <img src="/img/features/support.png" alt="Support" />
       </a>
       <h3 class="title">
         <a href="/faq/">Full support</a>
@@ -157,35 +157,35 @@ simply hand us your questions and we can do the rest</p>
     <div id="item-3" class="control-operator"></div>
     <figure class="item">
       <a href="http://www.hrc.govt.nz/" target="_blank">
-        <img class="img-responsive" src="img/logos/HRC.jpg" alt="Health Research Council Of New Zealand" />
+        <img class="img-responsive" src="/img/logos/HRC.jpg" alt="Health Research Council Of New Zealand" />
       </a>
       <a href="http://www.dse.vic.gov.au/" target="_blank">
-        <img class="img-responsive" src="img/logos/DSE.jpg" alt="Department of Sustainability and Environment"/>
+        <img class="img-responsive" src="/img/logos/DSE.jpg" alt="Department of Sustainability and Environment"/>
       </a>
       <a href="https://www.vu.edu.au/" target="_blank">
-        <img class="img-responsive" src="img/logos/VU.jpg" alt="Victoria University"/>
+        <img class="img-responsive" src="/img/logos/VU.jpg" alt="Victoria University"/>
       </a>
     </figure>
     <figure class="item">
       <a href="http://www.unimelb.edu.au/" target="_blank">
-        <img class="img-responsive" src="img/logos/UoM.jpg" alt="University of Melbourne"/>
+        <img class="img-responsive" src="/img/logos/UoM.jpg" alt="University of Melbourne"/>
       </a>
       <a href="http://www.cec.health.nsw.gov.au/" target="_blank">
-        <img class="img-responsive" src="img/logos/CEC.jpg" alt="Clinical Excellence Commission"/>
+        <img class="img-responsive" src="/img/logos/CEC.jpg" alt="Clinical Excellence Commission"/>
       </a>
       <a href="http://www.mentalhealth.wa.gov.au/Homepage.aspx" target="_blank">
-        <img class="img-responsive" src="img/logos/MHCWA.gif" alt="Mental Health Commission WA"/>
+        <img class="img-responsive" src="/img/logos/MHCWA.gif" alt="Mental Health Commission WA"/>
       </a>
     </figure>
     <figure class="item">
       <a href="http://www.nab.com.au/" target="_blank">
-        <img class="img-responsive" src="img/logos/NAB.jpg" alt="National Australia Bank"/>
+        <img class="img-responsive" src="/img/logos/NAB.jpg" alt="National Australia Bank"/>
       </a>
       <a href="http://www.rightmanagement.com.au/wps/wcm/connect/right-au-en/home" target="_blank">
-        <img class="img-responsive" src="img/logos/Rgt.jpg" alt="Right Management"/>
+        <img class="img-responsive" src="/img/logos/Rgt.jpg" alt="Right Management"/>
       </a>
       <a href="https://www.uq.edu.au/" target="_blank">
-        <img class="img-responsive" src="img/logos/UoQ.jpg" alt="University of Queensland"/>
+        <img class="img-responsive" src="/img/logos/UoQ.jpg" alt="University of Queensland"/>
       </a>
     </figure>
     <div class="controls">
