--- a/contact/index.html
+++ b/contact/index.html
@@ -9,20 +9,48 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
   </h2>
   <div class="row">
     <div class="feature col-sm-6 col-md-3">
-      <a href="tel:0393409001">
+      <a  href="tel:0393409001"
+          onclick=" ga('send', {
+                    hitType: 'event',
+                    eventCategory: 'Contact',
+                    eventAction: 'link',
+                    eventLabel: 'Phone'
+                });">
         <img src="/img/features/mobile.png" alt="Phone" />
       </a>
       <h3 class="title">
-        <a href="tel:0393409001">Phone Us</a>
+        <a  href="tel:0393409001"
+            onclick=" ga('send', {
+                      hitType: 'event',
+                      eventCategory: 'Contact',
+                      eventAction: 'link',
+                      eventLabel: 'Phone'
+                  });">
+          Phone Us <span class="sr-only">(calls number)</span>
+        </a>
       </h3>
       <p>+613 9340 9001</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="mailto:info@websurvey.com.au">
+      <a href="mailto:info@websurvey.com.au"
+      onclick=" ga('send', {
+                hitType: 'event',
+                eventCategory: 'Contact',
+                eventAction: 'link',
+                eventLabel: 'Email'
+            });">
         <img src="/img/features/email.png" alt="email" />
       </a>
       <h3 class="title">
-        <a href="mailto:info@websurvey.com.au">Email Us</a>
+        <a href="mailto:info@websurvey.com.au"
+        onclick=" ga('send', {
+                  hitType: 'event',
+                  eventCategory: 'Contact',
+                  eventAction: 'link',
+                  eventLabel: 'Email'
+              });">
+              Email Us
+        </a>
       </h3>
       <p>info@websurvey.com.au</p>
     </div>
@@ -39,11 +67,25 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
       </p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
+      <a  href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US"
+      target="_blank"
+      onclick=" ga('send', {
+                hitType: 'event',
+                eventCategory: 'Contact',
+                eventAction: 'link',
+                eventLabel: 'Address'
+            });">
         <img src="/img/features/home.png" alt="street address" />
       </a>
       <h3 class="title">
-        <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
+        <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US"
+        target="_blank"
+        onclick=" ga('send', {
+                  hitType: 'event',
+                  eventCategory: 'Contact',
+                  eventAction: 'link',
+                  eventLabel: 'Address'
+              });">
           Visit Us
         </a>
       </h3>
@@ -63,7 +105,14 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
     <div class="row">
       <div class="col-md-12">
         <p class="sd-map">
-          <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
+          <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US"
+          target="_blank"
+          onclick=" ga('send', {
+                    hitType: 'event',
+                    eventCategory: 'Contact',
+                    eventAction: 'link',
+                    eventLabel: 'Address'
+                });">
             <img src="/img/sdmap/SD-map-final.png" alt="Strategic data location">
             <span class="sr-only">(opens new window to google maps)</span>
           </a>
