Add survey like demo data for report portal

--- a/reporting-portal/index.html
+++ b/reporting-portal/index.html
@@ -12,7 +12,7 @@ title: WebSurvey Reporting Portal Demo
 <!-- 2. Embed the component using flexmonster.embedPivotComponent() -->
 <script type="text/javascript">
 	flexmonster.embedPivotComponent("../flex_monster_config/component/flexmonster/", "pivotContainer", "100%", "615", {
-		configUrl: "../flex_monster_config/component/report.xml",
+		configUrl: "/reporting-portal/report.xml",
 		licenseKey: "Z51N-7G1JL1-1P0X-0C2C-1807-2D1D-281L-1015-0A0U-1I0F"
 	}, true);
 </script>
