--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ simply hand us your questions and we can do the rest</p>
 
 
 <!--Client list-->
-<div class="block">
+<div class="clients block">
   <h2 class="title-divider">
     <span>Clients</span>
   </h2>
