Added case studies

--- a/data-collection/index.html
+++ b/data-collection/index.html
@@ -1,10 +1,10 @@
 ---
 title: Online Data Collection for Research Projects and Surveys | WebSurvey Australia
-description: The data management specialists at WebSurvey can set up and manage your data collection project so that you get the information you need. 
+description: The data management specialists at WebSurvey can set up and manage your data collection project so that you get the information you need.
 ---
 <!-- ======== @Region: #content ======== -->
 <h2 class="title-divider">
-  <span>WebSurvey<span> Data Collection</span></span>
+  <span><span>WebSurvey</span> Data Collection</span>
 </h2>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <h3>Online Data Collection for Research Projects, Audits, Census Projects and Surveys</h3>
