Closed open tags on case studies

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -8,7 +8,7 @@ description: Case studies of WebSurvey projects.
   {% include sidebarcasestudies.html param="studyone" %}
   <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
 
-    <h2 class="title-divider"><span><span>Provision of gap-analysis survey solution</span></h2>
+    <h2 class="title-divider"><span><span>Provision of gap-analysis survey solution</span></span></h2>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
 
@@ -32,6 +32,6 @@ description: Case studies of WebSurvey projects.
 
     		<p>
     		The survey was run successfully in 2014 and 2015, and a survey targeting suppliers was introduced in 2016. The client has been able to use the data to present areas of success & concern to the AgLink board over the past 3 years. The surveys have enabled AgLink to identify what is important to its members and what to concentrate on to further improve the services they provide to their members. The original benchmark for AgLink’s performance was high and the insight gained during the annual surveys has ensured their performance has continued to grow with each survey.</p>
-
+      </div>
 </div>
 </div>
