--- a/case-studies/studytwo.html
+++ b/case-studies/studytwo.html
@@ -8,7 +8,7 @@ description: Case studies of WebSurvey projects.
   {% include sidebarcasestudies.html param="studytwo" %}
 	<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
 
-<h2 class="title-divider"><span><span>Statewide mental health data collection</span></h2>
+<h2 class="title-divider"><span><span>Statewide mental health data collection</span></span></h2>
 
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -29,7 +29,7 @@ description: Case studies of WebSurvey projects.
 
 <p>The tool includes a number of levels of access and authorisation, including state, regional and organisational access, as well as complex validation to ensure the content of the data collected is valid prior to its submission.</p>
 
-The MHC requires regular updates, enhancements and modifications to the administration site, functionality, and data validation. WebSurvey works closely with the MHC during the enhancements to ensure the solution is delivered to specification and on time.</p>
+<p>The MHC requires regular updates, enhancements and modifications to the administration site, functionality, and data validation. WebSurvey works closely with the MHC during the enhancements to ensure the solution is delivered to specification and on time.</p>
 
 <h3><em>Outcome:</em></h3>
 
@@ -37,10 +37,14 @@ The MHC requires regular updates, enhancements and modifications to the administ
 
 
 <p>The implementation of this data collection tool has had an exceptional impact on the timeframe with significant reduction in the time required for</p>
+
 <ul>
+
 <li>the collection and validation of data between the MHC and organisations</li>
 <li>the acceptance of the national submission as a result of fewer issues being raised due to the quality of the data being collected improving.</li>
+
 </ul>
+
 <p>The whole process now takes approximately one quarter of the time it took prior, enabling MHC WA to meet its dataset commitments to the Commonwealth in a prompt manner.</p>
 
 
@@ -49,5 +53,6 @@ The MHC requires regular updates, enhancements and modifications to the administ
 
 <p>Trevor Dare Manager Information Development Mental Health Commission<p>
 
+</div>
 </div>
 </div>
