Updated website copy

--- a/about/accessibility.html
+++ b/about/accessibility.html
@@ -12,7 +12,7 @@ description: WebSurvey provides a complete service for clients in Australia to c
 
   <h3>Our Surveys</h3>
   <p>
-    The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 guidelines at the AA standard.<br/>
+    The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 at the AA standard.<br/>
     WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.
   </p>
   <h3>Compliance Level</h3>
