--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -31,7 +31,8 @@ description: Case studies of WebSurvey projects.
     	<h3><em>Outcome:</em></h3>
 
     		<p>
-    		The survey was run successfully in 2014 and 2015, and a survey targeting suppliers was introduced in 2016. The client has been able to use the data to present areas of success & concern to the AgLink board over the past 3 years. The surveys have enabled AgLink to identify what is important to its members and what to concentrate on to further improve the services they provide to their members. The original benchmark for AgLink’s performance was high and the insight gained during the annual surveys has ensured their performance has continued to grow with each survey.</p>
+          The survey has been run successfully since 2014 with a survey targeting suppliers introduced in 2016. The client has been able to use the data to present areas of success & concern to the AgLink board. 
+        </p>
       </div>
 </div>
 </div>
