--- a/faq/index.html
+++ b/faq/index.html
@@ -15,7 +15,7 @@ description: Find out more about WebSurvey's complete online survey services. Lo
     <p>WebSurvey follows a three step process:</p>
     <ol>
       <li><strong>Set up:</strong> You provide your questions and the email addresses of your respondents. We create your survey and place it online. For complex surveys will we work with you to ensure you get the data you need.</li>
-      <li><strong>Execution:</strong> Your respondents are invited to your online survey via email. While your survey is ‘live’ you can monitor its progress. Before your survey closes, we can email a reminder to respondents who haven’t completed it.</li>
+      <li><strong>Execution:</strong> Your respondents are invited to your online survey via email and/or sms. While your survey is ‘live’ you can monitor its progress. Before your survey closes, we can email and/or sms a reminder to respondents who haven’t completed it.</li>
       <li><strong>Results:</strong> When your survey ends, we report your results in an agreed format. If required, WebSurvey’s data experts can also analyse your survey results.</li>
     </ol>
 
