--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -18,16 +18,17 @@ description: Find out more about WebSurvey's complete online survey services. Lo
     <p>We host our surveys on our own systems at a secure Melbourne based co-location facility. This facility includes 24/7 monitoring, 24/7 guarded and monitored access, climate control, redundant power and redundant high-speed internet connectivity.</p>
 
     <h3>Will my survey be secure?</h3>
-    <p>The data trasmitted from your device to our servers is encrypted to ensure security during data submission. Our servers are hosted in a dedicated cabinet in a Melbourne based co-location facility containing our network of high-end servers. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintains policy and procedure consistent with certification at the PROTECTED level of the Australian Signals Directorate’s (ASD) Australian Government Information Security Manual (ISM).</p>
+    <p>The data trasmitted from your device to our servers is encrypted to ensure security during data submission. Our servers are hosted in a dedicated cabinet in a Melbourne based co-location facility containing our network of high-end servers. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintain IT infrastructure and policy and procedure focused on maintenance of a high level of security.</p>
 
     <h3>Does WebSurvey support all browsers?</h3>
     <p>We endeavour to ensure that all WebSurvey widgets are appropriately rendered and functional on a range of supported browsers. WebSurvey continually updates its survey technology to incorporate industry-leading improvements – such as browser-responsive display – and to reflect best practice in accessibility and usability. This inevitably means that some older browsers will be incapable of rendering new technologies.</p>
-    <p>Respondents using Internet Explorer 7 and Internet Explorer 8 may see some degradation in the appearance of some pages.  Survey functionality will not be affected.</p>
+    <p>Internet Explorer 9 and 10 (IE9 and IE10) have entered end-of-life, and as such, WebSurvey no longer supports them.  If you believe your respondents may be using IE9 or IE10, please discuss this with us.
+    </p>
 
     <h3>Is WebSurvey mobile-friendly?  </h3>
     <p>WebSurvey's standard functionality can be implemented to be responsive, user friendly and appropriately rendered on tablets and mobile phones as well as desktop &amp; laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology.</p>
 
     <h3>Does WebSurvey comply with the WCAG 2.0 Guidelines? </h3>
-    <p>The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 guidelines at the AA standard. WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.</p>
+    <p>The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 at the AA standard. WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.</p>
   </div>
 </div>
