--- a/features/index.html
+++ b/features/index.html
@@ -15,7 +15,7 @@ description: Complete online survey creation, hosting &amp; reporting service fo
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Secure and reliable survey hosting</h3>
     <p>We understand that state-of-the-art data security is essential. WebSurvey is hosted in a secure Melbourne based co-location facility in a dedicated cabinet containing our network of high-end servers.</p>
-    <p>Our online functionality is closely monitored by our dedicated IT Infrastructure team. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintains policy and procedure consistent with certification at the PROTECTED level of the Australian Signals Directorate’s (ASD) Australian Government Information Security Manual (ISM).</p>
+    <p>Our online functionality is closely monitored by our dedicated IT Infrastructure team. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintain IT infrastructure and policy and procedure focused on maintenance of a high level of security.</p>
   </div>
   <!-- /feature-->
   <!--a feature-->
