Updating page titles

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -1,5 +1,5 @@
 ---
-title: Case Studies | WebSurvey Australia
+title: Case Studies | WebSurvey 
 description: Case studies of WebSurvey projects.
 ---
 <!-- ======== @Region: #content ======== -->
@@ -31,7 +31,7 @@ description: Case studies of WebSurvey projects.
     	<h3><em>Outcome:</em></h3>
 
     		<p>
-          The survey has been run successfully since 2014 with a survey targeting suppliers introduced in 2016. The client has been able to use the data to present areas of success & concern to the AgLink board. 
+          The survey has been run successfully since 2014 with a survey targeting suppliers introduced in 2016. The client has been able to use the data to present areas of success & concern to the AgLink board.
         </p>
       </div>
 </div>
