--- a/case-studies/studytwo.html
+++ b/case-studies/studytwo.html
@@ -1,5 +1,5 @@
 ---
-title: Case Studies | WebSurvey Australia
+title: Case Studies | WebSurvey 
 description: Case studies of WebSurvey projects.
 ---
 <!-- ======== @Region: #content ======== -->
