--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,5 @@
 ---
-title: Contact WebSurvey for your next online survey | Fitzroy | Melbourne
+title: Contact | WebSurvey
 description: Need an online survey? WebSurvey will run it for you. Contact us for a non obligation discussion about your online survey needs. WebSurvey. Melbourne.
 ---
 <!-- ======== @Region: #content ======== -->
