--- a/data-collection/index.html
+++ b/data-collection/index.html
@@ -1,5 +1,5 @@
 ---
-title: Online Data Collection for Research Projects and Surveys | WebSurvey Australia
+title: Data Collection | WebSurvey 
 description: The data management specialists at WebSurvey can set up and manage your data collection project so that you get the information you need.
 ---
 <!-- ======== @Region: #content ======== -->
