--- a/services/index.html
+++ b/services/index.html
@@ -1,5 +1,5 @@
 ---
-title: WebSurvey | An online survey business | Melbourne | Australia
+title:  Services | WebSurvey
 description: WebSurvey is an online survey business created &amp; managed by survey experts. We can run your online surveys for you. Located in Melbourne, Australia.
 ---
 <!-- ======== @Region: #content ======== -->
