--- a/about/privacy.html
+++ b/about/privacy.html
@@ -1,5 +1,5 @@
 ---
-title: We create an online survey for you | About WebSurvey | Melbourne
+title: Privacy | WebSurvey 
 description: WebSurvey provides a complete service for clients in Australia to create an online survey. Setup, execution, hosting &amp; reporting. Based in Fitzroy, Melbourne.
 ---
 <!-- ======== @Region: #content ======== -->
