Updating page title

--- a/features/index.html
+++ b/features/index.html
@@ -1,5 +1,5 @@
 ---
-title: Online survey creation, hosting &amp; reporting service | Australia | WebSurvey
+title: Features | WebSurvey
 description: Complete online survey creation, hosting &amp; reporting service for market research, questionnaires, online audits &amp; data collection. WebSurvey, Australia.
 ---
 <!-- ======== @Region: #content ======== -->
