adding new pages to faq section and changing size of map on contact page

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,5 +1,5 @@
 ---
-title: Complete online survey service | FAQs | WebSurvey | Fitzroy
+title: Getting Started | WebSurvey
 description: Find out more about WebSurvey's complete online survey services. Located in Fitzroy, Melbourne, we service clients located throughout Australia.
 ---
 <!-- ======== @Region: #content ======== -->
@@ -8,7 +8,7 @@ description: Find out more about WebSurvey's complete online survey services. Lo
   <!--main content-->
   <div class="col-md-9">
     <h2 class="title-divider">
-      <span>Getting <span class="de-em">Started</span></span>
+      <span>Getting Started</span>
     </h2>
 
     <h3>How does WebSurvey work?</h3>
