--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -1,5 +1,5 @@
 ---
-title: Complete online survey service | FAQs | WebSurvey | Fitzroy
+title: Technical Features | WebSurvey
 description: Find out more about WebSurvey's complete online survey services. Located in Fitzroy, Melbourne, we service clients located throughout Australia.
 ---
 <!-- ======== @Region: #content ======== -->
@@ -8,25 +8,24 @@ description: Find out more about WebSurvey's complete online survey services. Lo
   <!--main content-->
   <div class="col-md-9">
     <h2 class="title-divider">
-      <span>Technical <span class="de-em">Features</span></span>
+      <span>Technical Features</span>
     </h2>
 
     <h3>My survey is very large and complex, can WebSurvey cope?</h3>
-    <p>Yes. WebSurvey is a comprehensive platform able to manage thousands of respondents in a single survey.</p>
+    <p>Yes. WebSurvey specialises in large and complex. It’s a comprehensive platform able to manage complicated workflows and thousands of respondents in a single survey.</p>
 
     <h3>Where will my online survey be hosted?</h3>
-    <p>We host our surveys on our own systems at a secure Melbourne based co-location facility. This facility includes 24/7 monitoring, 24/7 guarded and monitored access, climate control, redundant power and redundant high-speed internet connectivity.</p>
+    <p>Detailed information regarding our survey hosting, including our service availability guarantee, is available at our <a href="../availability">Availability, security & support</a> page.</p>
+    <p>Please see our <a href="../infrastructure">WebSurvey infrastructure updates</a> page for an overview of our approach to infrastructure updates.</p>
 
     <h3>Will my survey be secure?</h3>
-    <p>The data trasmitted from your device to our servers is encrypted to ensure security during data submission. Our servers are hosted in a dedicated cabinet in a Melbourne based co-location facility containing our network of high-end servers. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintain IT infrastructure and policy and procedure focused on maintenance of a high level of security.</p>
+    <p>WebSurvey invests significant resources to ensure our systems are secure and robust. We are highly conscious of the potential threats and actively consider theconsequences of such threats. We routinely assess risks and utilise specialist advisors to help with these assessments, as well as devising means to mitigate the risks. These considerations extend beyond the technical infrastructure (platforms, connectivity, environment, access control and so on) to the associated human processes such as how data can be stored and transferred and who can authorise and allow access. At all times, we aim to maintain appropriate (external) security standards. </p>
 
     <h3>Does WebSurvey support all browsers?</h3>
     <p>We endeavour to ensure that all WebSurvey widgets are appropriately rendered and functional on a range of supported browsers. WebSurvey continually updates its survey technology to incorporate industry-leading improvements – such as browser-responsive display – and to reflect best practice in accessibility and usability. This inevitably means that some older browsers will be incapable of rendering new technologies.</p>
-    <p>Internet Explorer 9 and 10 (IE9 and IE10) have entered end-of-life, and as such, WebSurvey no longer supports them.  If you believe your respondents may be using IE9 or IE10, please discuss this with us.
-    </p>
 
     <h3>Is WebSurvey mobile-friendly?  </h3>
-    <p>WebSurvey's standard functionality can be implemented to be responsive, user friendly and appropriately rendered on tablets and mobile phones as well as desktop &amp; laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology.</p>
+    <p>WebSurvey's standard functionality is responsive, user friendly and appropriately rendered ontablets and mobile phones as well as desktop & laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology.</p>
 
     <h3>Does WebSurvey comply with the WCAG 2.0 Guidelines? </h3>
     <p>The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 at the AA standard. WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.</p>
