Changing text on Features page

--- a/features/index.html
+++ b/features/index.html
@@ -14,7 +14,7 @@ description: Complete online survey creation, hosting &amp; reporting service fo
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Secure and reliable survey hosting</h3>
-    <p>We understand that state-of-the-art data security is essential. WebSurvey is hosted in a secure Melbourne based co-location facility in a dedicated cabinet containing our network of high-end servers.</p>
+    <p>Detailed information regarding our survey hosting, including our service availability guarantee, is available at our <a href="/../faq/availability">Availability, security & support</a> page.</p>
     <p>Our online functionality is closely monitored by our dedicated IT Infrastructure team. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintain IT infrastructure and policy and procedure focused on maintenance of a high level of security.</p>
   </div>
   <!-- /feature-->
