Change SD to Logicly

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ description: WebSurvey provides a complete service for clients in Australia to c
     types of online surveys.
   </h3>
   <p>
-    WebSurvey is operated by Strategic Data Pty Ltd and is backed by their experience in statistics, mathematics and information
+    WebSurvey is operated by Logicly Pty Ltd and is backed by their experience in statistics, mathematics and information
     handling. WebSurvey partners with you to design and implement surveys that are easy to use.
     Our services include:
   </p>
